# esp32s3-serialusb-network

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
littlefs/: login.html  terminal.html  upload.html
main/: CMakeLists.txt  config.template.h  esp-mdns.cpp  esp-mdns.h  http-server.cpp  http-server.h  idf_component.yml  led_indicator.cpp  led_indicator.h  littlefs.cpp  littlefs.h  local-ch34x-device.cpp  local-ch34x-device.h  main.cpp  usb-handler.cpp  usb-handler.h  w5500.cpp  w5500.h  web-logger.cpp  web-logger.h  wifi.cpp  wifi.h
partition_table/: partitionTable.csv
